--- a/style.css
+++ b/style.css
@@ -1101,6 +1101,15 @@ main,
     text-align: justify;
 }
 
+.note-body h1 {
+    color: var(--text-primary);
+    font-size: 2.4rem;
+    margin-top: 3rem;
+    margin-bottom: 1.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 2px solid var(--border-color);
+}
+
 .note-body h2 {
     color: var(--text-primary);
     font-size: 1.8rem;
